docker compose for 3 web server

--- a/src/.env
+++ b/src/.env
@@ -1,3 +1,12 @@
+SERVER_PORT=3000
+DB_HOST=localhost
+DB_PORT=5432
+DB_DBNAME=postgres
+DB_SSLMODE=disable
+DB_USERNAME=postgres
 DB_PASSWORD=postgres
+MIGRATION_URL=file://${PWD}/schema
 TOKEN_SECRET_KEY=randomrandomrandom
 TOKEN_VALIDATION_TIME=24h
+LOGGER_FILE_PATH=./logs/logs.json
+ENV=DEV
