--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       context: ./src
       dockerfile: Dockerfile
     environment:
-      SERVER_PORT: 3000
+      SERVER_PORT: 80
       DB_HOST: psql
       DB_USERNAME: root
       DB_PASSWORD: root
@@ -23,10 +23,10 @@ services:
   server2:
     <<: *main-server
     environment: &snd-server-env
+      SERVER_PORT: 80
       DB_HOST: psql
       DB_USERNAME: root_ro
       DB_PASSWORD: root_ro
-      SERVER_PORT: 3000
       DB_DBNAME: goal-tracker
       GIN_MODE: release
       LOGGER_FILE_PATH: ./logs/logs.json
@@ -49,11 +49,12 @@ services:
     build:
       context: ./database
       dockerfile: Dockerfile
+    container_name: psql
     volumes: [ "/home/khalid/uni/7sem/web-labs/data:/var/lib/postgresql/data" ]
 
   pgadmin:
     container_name: pgadmin4
-    image: dpage/pgadmin4
+    image: dpage/pgadmin4:8.0
     restart: always
     environment:
       PGADMIN_DEFAULT_EMAIL: admin@admin.com
