--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     build:
       context: ./src
       dockerfile: Dockerfile
-    environment:
+    environment: &fst-server-env
       SERVER_PORT: 80
       DB_HOST: psql
       DB_USERNAME: root
@@ -22,28 +22,36 @@ services:
 
   server2:
     <<: *main-server
-    environment: &snd-server-env
-      SERVER_PORT: 80
-      DB_HOST: psql
-      DB_USERNAME: root_ro
-      DB_PASSWORD: root_ro
-      DB_DBNAME: goal-tracker
-      GIN_MODE: release
-      LOGGER_FILE_PATH: ./logs/logs.json
-      READ_ONLY: true
-    working_dir: /app
-    entrypoint: [ "/app/wait-for.sh", "psql:5432", "--", "/app/start.sh" ]
-    command: [ "/app/server" ]
-    depends_on: [ psql, server1 ]
+    environment:
+      <<: *fst-server-env
     volumes: [ "./logs/logs1.json:/app/logs/logs.json" ]
 
   server3:
     <<: *main-server
     environment:
-      <<: *snd-server-env
+      <<: *fst-server-env
     volumes: [ "./logs/logs2.json:/app/logs/logs.json" ]
     ports:
       - "8000:3000"
+
+  mirror-server:
+    build:
+      context: ./src
+      dockerfile: Dockerfile
+    environment:
+      SERVER_PORT: 80
+      DB_HOST: psql-slave
+      DB_USERNAME: root
+      DB_PASSWORD: root
+      DB_DBNAME: goal-tracker
+      GIN_MODE: release
+      LOGGER_FILE_PATH: ./logs/logs.json
+      BASE_PATH: /mirror/api/v1
+    working_dir: /app
+    entrypoint: [ "/app/wait-for.sh", "psql-slave:5432", "--", "/app/start.sh" ]
+    command: [ "/app/server" ]
+    depends_on: [ psql-slave ]
+    volumes: [ "./logs/mirror-logs.json:/app/logs/logs.json" ]
 
   psql:
     build:
@@ -51,6 +59,13 @@ services:
       dockerfile: Dockerfile
     container_name: psql
     volumes: [ "/home/khalid/uni/7sem/web-labs/data:/var/lib/postgresql/data" ]
+
+  psql-slave:
+    build:
+      context: ./database
+      dockerfile: Dockerfile
+    container_name: psql-slave
+    volumes: [ "/home/khalid/uni/7sem/web-labs/data-slave:/var/lib/postgresql/data" ]
 
   pgadmin:
     container_name: pgadmin4
@@ -73,13 +88,13 @@ services:
       - ./nginx/hosts:/etc/hosts
       - ./static:/static
       - ./nginx/certs:/etc/nginx/certs
+      - ./nginx/logs/error.log:/var/log/nginx/error.log
+      - ./nginx/logs/access.log:/var/log/nginx/access.log
     links:
       - "server1:server1"
       - "server2:server2"
       - "server3:server3"
+      - "mirror-server:mirror-server"
       - "pgadmin:pgadmin"
     depends_on: [ server1, server2, server3, pgadmin ]
-  
 
-volumes:
-  data:
