--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -2,10 +2,17 @@ events {}
 
 http {
     proxy_cache_path /var/cache/nginx levels=1:2 keys_zone=default_cache:10m max_size=2g; #inactive=120m use_temp_path=off;
+
+#     log_format main '$remote_addr - $remote_user [$time_local] "$request" '
+#                       '$status $body_bytes_sent "$http_referer" '
+#                       '"$http_user_agent" "$http_x_forwarded_for"';
+#     access_log /var/log/nginx/access.log main;
+#     error_log  /var/log/nginx/error.log;
+
     upstream backend_get_cluster {
         server server1 weight=2;
-        server server2;
-        server server3;
+        server server2 weight=1;
+        server server3 weight=1;
     }
 
     upstream main_backend {
@@ -17,6 +24,10 @@ http {
         default main_backend;
     }
 
+    upstream mirror_backend {
+        server mirror-server weight=1;
+    }
+
     server {
         listen 80;
         return 301 https://$host$request_uri;
@@ -25,7 +36,7 @@ http {
     server {
         listen 443 ssl http2;
         listen 443 quic reuseport;
-        server_name gtracker.com;
+        server_name         gtracker.com;
         ssl_certificate     certs/gtracker.com.crt;
         ssl_certificate_key certs/gtracker.com.key;
         ssl_protocols       TLSv1 TLSv1.1 TLSv1.2 TLSv1.3;
@@ -46,7 +57,7 @@ http {
         proxy_cache_valid 200 301 302 120m;
         proxy_cache_valid 404 1m;
 
-        location /api/v1 {
+        location /proxy/ {
             proxy_pass_header Server;
             proxy_no_cache 1;
 
@@ -56,7 +67,9 @@ http {
 
             proxy_set_header Authorization $http_authorization;
             proxy_pass_header Authorization;
+        }
 
+        location /api/v1/ {
             proxy_pass http://$upstream_location;
         }
 
@@ -80,6 +93,18 @@ http {
             root /static;
         }
 
+        location ~ ^/mirror/ {
+            proxy_no_cache 1;
+
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+
+            rewrite ^/(.*) /$1 break;
+
+            proxy_pass http://mirror_backend;
+        }
+
         location = /index.html {
             root /static;
             http2_push /static/img/goal-tracking-apps.jpg;
@@ -97,10 +122,6 @@ http {
 
         location /admin {
             return 301 http://localhost:5050;
-        }
-
-        location /status {
-            stub_status;
         }
     }
 }
