--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -2,6 +2,7 @@ version: '3.9'
 services:
   db:
     image: postgres:16-alpine
+    container_name: postgres
     restart: always
     environment:
       POSTGRES_USER: postgres
