last configs of nginx

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -3,11 +3,11 @@ events {}
 http {
     proxy_cache_path /var/cache/nginx levels=1:2 keys_zone=default_cache:10m max_size=2g; #inactive=120m use_temp_path=off;
 
-#     log_format main '$remote_addr - $remote_user [$time_local] "$request" '
-#                       '$status $body_bytes_sent "$http_referer" '
-#                       '"$http_user_agent" "$http_x_forwarded_for"';
-#     access_log /var/log/nginx/access.log main;
-#     error_log  /var/log/nginx/error.log;
+    log_format main '$remote_addr - $remote_user [$time_local] "$request" '
+                      '$status $body_bytes_sent "$http_referer" '
+                      '"$http_user_agent" "$http_x_forwarded_for"';
+    access_log /var/log/nginx/access.log main;
+    error_log  /var/log/nginx/error.log;
 
     upstream backend_get_cluster {
         server server1 weight=2;
@@ -93,18 +93,6 @@ http {
             root /static;
         }
 
-        location ~ ^/mirror/ {
-            proxy_no_cache 1;
-
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-
-            rewrite ^/(.*) /$1 break;
-
-            proxy_pass http://mirror_backend;
-        }
-
         location = /index.html {
             root /static;
             http2_push /static/img/goal-tracking-apps.jpg;
@@ -122,6 +110,50 @@ http {
 
         location /admin {
             return 301 http://localhost:5050;
+        }
+
+        location /mirror/api/v1/ {
+            proxy_no_cache 1;
+
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+
+            rewrite ^/(.*) /$1 break;
+
+            proxy_pass http://mirror_backend;
+        }
+
+        location = /mirror/api/v1/ {
+            return 302 /mirror/api/v1/swagger/index.html;
+        }
+
+        location = /mirror/api/v1 {
+            return 302 /mirror/api/v1/swagger/index.html;
+        }
+
+        location = /mirror/swagger {
+            return 302 /mirror/api/v1/swagger/index.html;
+        }
+
+        location = /mirror/swagger/ {
+            return 302 /mirror/api/v1/swagger/index.html;
+        }
+
+        location /mirror {
+            alias /static;
+            index readme.html;
+            default_type text/html;
+        }
+
+        location = /mirror/index.html {
+            alias /static/index.html;
+            http2_push /static/img/goal-tracking-apps.jpg;
+        }
+
+        location /mirror/test {
+            alias /static;
+            http2_push /static/img/goal-tracking-apps.jpg;
         }
     }
 }
