--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -9,6 +9,31 @@ http {
     access_log /var/log/nginx/access.log main;
     error_log  /var/log/nginx/error.log;
 
+    types {
+        text/html                             html htm shtml;
+        text/css                              css;
+        text/xml                              xml;
+        application/javascript                js;
+        application/rss+xml                   rss;
+        application/vnd.ms-fontobject         eot;
+        application/x-font-ttf                ttf;
+        application/vnd.oasis.opendocument.graphics odg;
+        image/svg+xml                         svg svgz;
+        application/x-shockwave-flash         swf;
+        text/mathml                           mml;
+        text/plain                            txt;
+        text/vnd.sun.j2me.app-descriptor      jad;
+        text/vnd.wap.wml                      wml;
+        text/x-component                      htc;
+        image/png                             png;
+        image/jpeg                            jpeg jpg;
+        image/gif                             gif;
+        image/x-icon                          ico;
+        image/webp                            webp;
+        application/json                      json;
+    }
+
+
     upstream backend_get_cluster {
         server server1 weight=2;
         server server2 weight=1;
@@ -42,9 +67,12 @@ http {
         ssl_protocols       TLSv1 TLSv1.1 TLSv1.2 TLSv1.3;
 
         gzip on;
-        gzip_comp_level 5;
         gzip_disable "msie6";
-        gzip_types text/plain text/css application/json application/x-javascript text/xml application/xml application/xml+rss text/javascript;
+        gzip_vary on;
+        gzip_proxied any;
+        gzip_comp_level 6;
+        gzip_buffers 16 8k;
+        gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
 
         proxy_ignore_headers Cache-Control;
         proxy_hide_header Cache-Control;
@@ -91,6 +119,7 @@ http {
 
         location / {
             root /static;
+            try_files $uri $uri/ /static/index.html;
         }
 
         location = /index.html {
