--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -49,9 +49,9 @@ http {
         default main_backend;
     }
 
-    upstream mirror_backend {
-        server mirror-server weight=1;
-    }
+#     upstream mirror_backend {
+#         server mirror-server weight=1;
+#     }
 
     server {
         listen 80;
@@ -140,49 +140,49 @@ http {
         location /admin {
             return 301 http://localhost:5050;
         }
-
-        location /mirror/api/v1/ {
-            proxy_no_cache 1;
-
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-
-            rewrite ^/(.*) /$1 break;
-
-            proxy_pass http://mirror_backend;
-        }
-
-        location = /mirror/api/v1/ {
-            return 302 /mirror/api/v1/swagger/index.html;
-        }
-
-        location = /mirror/api/v1 {
-            return 302 /mirror/api/v1/swagger/index.html;
-        }
-
-        location = /mirror/swagger {
-            return 302 /mirror/api/v1/swagger/index.html;
-        }
-
-        location = /mirror/swagger/ {
-            return 302 /mirror/api/v1/swagger/index.html;
-        }
-
-        location /mirror {
-            alias /static;
-            index readme.html;
-            default_type text/html;
-        }
-
-        location = /mirror/index.html {
-            alias /static/index.html;
-            http2_push /static/img/goal-tracking-apps.jpg;
-        }
-
-        location /mirror/test {
-            alias /static;
-            http2_push /static/img/goal-tracking-apps.jpg;
-        }
+#
+#         location /mirror/api/v1/ {
+#             proxy_no_cache 1;
+#
+#             proxy_set_header Host $host;
+#             proxy_set_header X-Real-IP $remote_addr;
+#             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+#
+#             rewrite ^/(.*) /$1 break;
+#
+#             proxy_pass http://mirror_backend;
+#         }
+#
+#         location = /mirror/api/v1/ {
+#             return 302 /mirror/api/v1/swagger/index.html;
+#         }
+#
+#         location = /mirror/api/v1 {
+#             return 302 /mirror/api/v1/swagger/index.html;
+#         }
+#
+#         location = /mirror/swagger {
+#             return 302 /mirror/api/v1/swagger/index.html;
+#         }
+#
+#         location = /mirror/swagger/ {
+#             return 302 /mirror/api/v1/swagger/index.html;
+#         }
+#
+#         location /mirror {
+#             alias /static;
+#             index readme.html;
+#             default_type text/html;
+#         }
+#
+#         location = /mirror/index.html {
+#             alias /static/index.html;
+#             http2_push /static/img/goal-tracking-apps.jpg;
+#         }
+#
+#         location /mirror/test {
+#             alias /static;
+#             http2_push /static/img/goal-tracking-apps.jpg;
+#         }
     }
 }
