--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -23,15 +23,18 @@ jobs:
 
       - name: Install Dependencies
         run: |
+          cd src/
           go mod download
 
       - name: Test
         run: |
+          cd src/
           go test ./...
 
       - name: Build
         run: |
-          go build -o server ./cmd/web/main.go
+          cd src/
+          go build -o /server ./main.go
 
   package:
     runs-on: ubuntu-latest
@@ -45,4 +48,20 @@ jobs:
       - name: Copy Build Artifacts
         run: |
           mkdir -p build
-          cp server .env schema start.sh wait-for.sh build/
+          cp src/server .env src/schema src/start.sh src/wait-for.sh build/
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+
+      - name: Build Docker Image
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          file: Dockerfile
+          platforms: linux/amd64
+
+      - name: Start Server
+        working-directory: ./build  # Change working directory to the build directory
+        run: |
+            cd src/
+            ./start.sh
