--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,9 +1,67 @@
-name: docker-compose-actions-workflow
-on: push
+name: Build and Test
+
+on:
+  push:
+    branches:
+      - main
+  pull_request:
+    branches:
+      - main
+
 jobs:
-  test:
+  build:
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v2
-      - name: Build the stack
-        run: docker-compose up -d
+      - name: Checkout Repository
+        uses: actions/checkout@v2
+
+      - name: Set up Go
+        uses: actions/setup-go@v2
+        with:
+          go-version: 1.21.5
+
+      - name: Install Dependencies
+        run: |
+          cd src/
+          go mod download
+
+      - name: Test
+        run: |
+          cd src/
+          go test ./...
+
+      - name: Build
+        run: |
+          cd src/
+          go build -o /server ./main.go
+
+  package:
+    runs-on: ubuntu-latest
+
+    needs: build
+
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v2
+
+      - name: Copy Build Artifacts
+        run: |
+          mkdir -p build
+          cp src/server .env src/schema src/start.sh src/wait-for.sh build/
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+
+      - name: Build Docker Image
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          file: Dockerfile
+          platforms: linux/amd64
+
+      - name: Start Server
+        working-directory: ./build  # Change working directory to the build directory
+        run: |
+            cd src/
+            ./start.sh
